fixed my html page

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
   background: gray;
 }
 .name-tag {
- background:#BB0000;
+ background:pink;
  border-radius: 25px;
  width:450px;
  margin-left:auto;
